--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,20 @@
 {
+  "name": "aytac/gdpr-bitbucket-updater",
+  "description": "Updates wp gdpr addon through bitbucket",
+  "authors": [
+    {
+      "name": "Aytac Kokus",
+      "email": "aytac@appsaloon.be"
+    }
+  ],
+  "minimum-stability": "dev",
+  "require": {
+    "php": ">=5.3.0"
+  },
+
   "autoload": {
     "psr-4": {
-      "BitbucketUpdater\\" : "BitbucketUpdater/"
+      "BitbucketUpdater\\" : "src/"
     }
   }
 }
