--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
       "email": "aytac@appsaloon.be"
     }
   ],
+  "license": "GPL-2.0-only",
   "minimum-stability": "dev",
   "require": {
     "php": ">=5.3.0"
